Fixed to set sidebar and sidebar footer width to avoid a gap in sidebar.

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -50,6 +50,11 @@ body[data-useragent*='Trident'] .rightSidebar #dokuwiki__aside
 	white-space: nowrap;
 }
 
+#dokuwiki__aside #sidebar
+{
+    width: __width_sidebar__;
+}
+
 #dokuwiki__aside #sidebar .li
 {
 	line-height: 18px;
